<resources>
    <string name="app_name">Project_QLBN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Đăng nhập</string>
    <string name="login_sdt_hint">Nhập số điện thoại</string>
    <string name="login_otp_hint">Nhập mã OTP</string>
    <string name="receive_otp">Nhận mã</string>
    <string name="invalid_otp">Mã OTP không hợp lệ</string>
    <string name="an_error_unknow">Lỗi không xác định</string>
    <string name="failed_to_send_sms_code">Lỗi gửi mã xác nhận</string>
    <string name="send_sms_code_success">Gửi mã xác nhận thành công</string>
    <string name="otp_not_black">OTP không được để trống</string>
    <string name="phonenumber_is_not_format">Số điện thoại không đúng định dạng</string>
    <string name="logo">QLBN</string>
    <string name="menu_history">Lịch sử khám bệnh</string>
    <string name="menu_info_account">Thông tin tài khoản</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="ok">Ok</string>
    <string name="cancel">Huỷ</string>
    <string name="are_you_sure_you_want_to_logout">Bạn có chắc chắn muốn đăng xuất không?</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="des">[Hình ảnh]</string>
    <string name="Author">Nguyễn Hồng Quân</string>
    <string name="firstName">Họ</string>
    <string name="register_sex_male">Nam</string>
    <string name="register_sex_female">Nữ</string>
    <string name="address">Địa chỉ</string>
    <string name="update">Cập nhật</string>
    <string name="ngaySinh">Ngày sinh: </string>
    <string name="lastName">Tên</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="ngheNghiep">Nghề nghiệp</string>
    <string name="viewAvatar">Xem ảnh</string>
    <string name="chooseImageLibrary">Chọn ảnh mới</string>
    <string name="not_permission">Ứng dụng chưa được cấp quyền truy cập file</string>
    <string name="update_profile_success">Cập nhật thông tin thành công</string>
</resources>