<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="profile"
            type="com.quan.datn.model.ProfileModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="130dp"
                android:layout_height="130dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    loadImage="@{profile.avatar}"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="13dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/bg_circle_green"
                    android:padding="2dp"
                    android:src="@drawable/ic_camera_gray" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_Ho"
                    updateText="@{profile.hoBn}"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/primaryTextColor"
                    android:hint="@string/firstName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_Ten"
                    updateText="@{profile.tenBn}"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/primaryTextColor"
                    android:hint="@string/lastName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_sex_male"
                        style="@style/textView"
                        updateGenderNam="@{profile.gioiTinh}"
                        android:text="@string/register_sex_male"
                        android:checked="true"
                        android:textColor="#000"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radio_sex_female"
                        style="@style/textView"
                        updateGenderNu="@{profile.gioiTinh}"
                        android:layout_marginStart="20dp"
                        android:text="@string/register_sex_female"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="#000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ngaySinh"
                android:textSize="15sp"
                android:textColor="#000"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/txt_birthDay"
                style="@style/textView"
                updateText="@{' '+profile.ngaySinh}"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="1999-09-09"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="#000" />

            <EditText
                android:id="@+id/txt_address"
                updateText="@{profile.diaChi}"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/address"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_phoneNumber"
                updateText="@{profile.sdt}"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/phoneNumber"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_NgheNghiep"
                updateText="@{profile.ngheNghiep}"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/ngheNghiep"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_save_profile"
                style="@style/button"
                android:layout_width="150dp"
                android:background="@drawable/bg_button_default"
                android:text="@string/update"
                android:textAllCaps="true"
                />

        </LinearLayout>
    </LinearLayout>

</layout>